--- a/Project/Packages/manifest.json
+++ b/Project/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "1.1.4",
+    "com.unity.feature.development": "1.0.1",
     "com.unity.formats.fbx": "4.2.1",
-    "com.unity.ide.rider": "3.0.24",
+    "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.6.1",
     "com.unity.ml-agents": "file:../../com.unity.ml-agents",
